2011-02-24  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* patches/jtreg-png-reader.patch:
	Fixed tree to which this patch is applied.

2011-02-24  Andrew John Hughes  <ahughes@redhat.com>

	* patches/pr639-missing_shark_include.patch:
	Renamed.
	* Makefile.am: Fix name of patch.
	* NEWS: Updated.
	* patches/pr639-broken_shark_build.patch:
	Fix other Shark build issues with missing
	compilation of Shark files and lack of
	LLVM linker flags for the launcher.

2011-02-24  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	Only apply PR639 fix on hs20.
	* NEWS: Updated.

2011-02-24  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am: Add new patch.
	* patches/pr639-missing_shark_include.patch:
	Add missing include for Shark.

2011-02-23  Andrew John Hughes  <ahughes@redhat.com>

	* NEWS: Add 1.11 section.
	* configure.ac: Bump to 1.11pre.

2011-02-23  Andrew John Hughes  <ahughes@redhat.com>

	* acinclude.m4:
	(IT_CHECK_WITH_CACAO_SRC_ZIP): Add missing $.
	(IT_CHECK_WITH_JAMVM_SRC_ZIP): Likewise.
	(IT_WITH_OPENJDK_SRC_ZIP): Likewise.
	(IT_WITH_HOTSPOT_SRC_ZIP): Likewise.
	(IT_WITH_JAXP_DROP_ZIP): Likewise.
	(IT_WITH_JAF_DROP_ZIP): Likewise.
	(IT_WITH_JAXWS_DROP_ZIP): Likewise.

2011-02-23  Andrew John Hughes  <ahughes@redhat.com>

	* acinclude.m4:
	(IT_CHECK_WITH_CACAO_SRC_ZIP): Invert
	AM_CONDITIONAL test to get correct behaviour.
	(IT_CHECK_WITH_JAMVM_SRC_ZIP): Likewise.
	(IT_WITH_OPENJDK_SRC_ZIP): Likewise.
	(IT_WITH_HOTSPOT_SRC_ZIP): Likewise.
	(IT_WITH_JAXP_DROP_ZIP): Likewise.
	(IT_WITH_JAF_DROP_ZIP): Likewise.
	(IT_WITH_JAXWS_DROP_ZIP): Likewise.

2011-02-23  Andrew John Hughes  <ahughes@redhat.com>

	* acinclude.m4:
	(IT_ENABLE_JAMVM): Renamed from IT_CHECK_ENABLE_JAMVM.
	(IT_WITH_JAMVM_SRC_ZIP): Renamed form IT_CHECK_WITH_JAMVM_SRC_ZIP.
	(IT_ENABLE_CACAO): Renamed from IT_CHECK_ENABLE_CACAO.
	(IT_WITH_CACAO_HOME): Renamed form IT_CHECK_WITH_CACAO_HOME.
	(IT_WITH_CACAO_SRC_ZIP): Renamed form IT_CHECK_WITH_CACAO_SRC_ZIP.