@@ -748,7 +748,7 @@ endif
 	if ! echo "$(CACAO_SHA256SUM)  $(CACAO_SRC_ZIP)" \
 	 | $(SHA256SUM) --check ; \
 	then \
-	 if [ $(CACAO_SRC_ZIP) ] ; \
+	 if [ -e $(CACAO_SRC_ZIP) ] ; \
 	 then \
 	   mv $(CACAO_SRC_ZIP) $(CACAO_SRC_ZIP).old ; \
 	 fi ; \
@@ -776,7 +776,7 @@ endif
 	if ! echo "$(JAMVM_SHA256SUM)  $(JAMVM_SRC_ZIP)" \
 	 | $(SHA256SUM) --check ; \
 	then \
-	 if [ $(JAMVM_SRC_ZIP) ] ; \
+	 if [ -e $(JAMVM_SRC_ZIP) ] ; \
 	 then \
 	   mv $(JAMVM_SRC_ZIP) $(JAMVM_SRC_ZIP).old ; \
 	 fi ; \
@@ -818,7 +818,7 @@ else
 	if ! echo "$(OPENJDK_MD5SUM)  $(OPENJDK_SRC_ZIP)" \
 	  | $(MD5SUM) --check ; \
 	then \
-	  if [ $(OPENJDK_SRC_ZIP) ] ; \
+	  if [ -e $(OPENJDK_SRC_ZIP) ] ; \
 	  then \
 	    mv $(OPENJDK_SRC_ZIP) $(OPENJDK_SRC_ZIP).old ; \
 	  fi ; \
@@ -835,7 +835,7 @@ endif
 	if ! echo "$${hotspot_md5sum}  $(HOTSPOT_SRC_ZIP)" \
 	  | $(MD5SUM) --check ; \
 	then \
-	  if [ $(HOTSPOT_SRC_ZIP) ] ; \
+	  if [ -e $(HOTSPOT_SRC_ZIP) ] ; \
 	  then \
 	    mv $(HOTSPOT_SRC_ZIP) $(HOTSPOT_SRC_ZIP).old ; \
 	  fi ; \
